# project-triangle

./: .gitignore  Cargo.toml  README.md  make (conflicted).sh.part  make [conflicted].sh  make-release.py  make.py  make.sh  project_triangle [conflicted].iws.part  project_triangle.ipr  project_triangle.iws
.github/workflows/: pt-debug.yml  pt-release.yml  pt.yml  rust.yml
maps/: map-test.json
src/: README.md  consts.rs  game.rs  main.rs  menu.rs  player.rs  types.rs
src/components/: entity.rs  game.rs  map.rs  map_gen.rs  menu.rs  mod.rs  object.rs  pause_menu.rs  physics_body.rs  player.rs  settings_loader.rs
src/gui/: gui_button.rs  gui_component.rs  gui_cursor.rs  mod.rs
src/physics/: mod.rs  physics_body.rs  physics_collider.rs  rigid_body.rs
