[package]
name = "project_triangle"
version = "0.1.0"
authors = ["STBoyden <stboyden@stboyden.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = {git = "https://github.com/stboyden/raylib-rs", branch = "3.0"}
