[package]
name = "project_triangle"
version = "0.1.0"
authors = ["STBoyden <stboyden@stboyden.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = {git = "https://github.com/deltaphc/raylib-rs", branch = "master"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"
