[package]
name = "project_triangle"
version = "0.1.0"
authors = ["STBoyden <stboyden@stboyden.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.0"
ptgui = {git = "https://github.com/STBoyden/ptgui"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
ron = "0.6"
lazy_static = "1.4"
regex = "1.3"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"
